# cuemate

./: .eslintrc.json  .gitignore  .pnpmfile.cjs  .prettierrc.json  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpmfile.cjs  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: release.yml
apps/desktop-client/: .eslintrc.json  ELECTRON_MIGRATION.md  README.md  build-main.js  floating.html  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  运行指南.md
apps/desktop-client/assets/: icon.icns
apps/desktop-client/docs/: macos-dock-hiding-implementation.md
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-client/src-tauri/capabilities/: default.json
apps/desktop-client/src-tauri/src/: commands.rs  main.rs  main_window.rs  platform.rs
apps/desktop-client/src-tauri/src/audio/: capture.rs  device_manager.rs  mod.rs  virtual_driver.rs
apps/desktop-client/src-tauri/src/windows/: close_button_window.rs  control_bar_window.rs  main_content_window.rs  main_focus_window.rs  mod.rs  panel_utils.rs  window_manager.rs
apps/desktop-tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: main.rs
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: config.ts  (+2 more)
data/sqlite/: cuemate.db  cuemate.db-shm  cuemate.db-wal
docs/: README.en.md  README.md  apis.md  architecture.md  getting-started.md
docs/images/: README.md
infra/docker/: docker-compose.yml
infra/nginx/: nginx.conf
services/asr-gateway/: package.json  tsconfig.json
services/llm-router/: package.json  tsconfig.json
services/rag-service/: README.md  package.json
services/web-api/: package.json  tsconfig.json
(+558 files in other folders)
