[package]
name = "cuemate-desktop-client"
version = "0.1.0"
description = "CueMate Desktop Audio Capture Client"
authors = ["CueMate Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-os = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
cpal = "0.15"
tokio-tungstenite = "0.21"
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
tauri-plugin-global-shortcut = "2.3.0"

# Platform specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winreg", "shellapi"] }
widestring = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# 移除了 custom-protocol，Tauri v2 中已内置
