[package]
name = "cuemate-desktop"
version = "0.1.0"
description = "CueMate Desktop - Real-time voice interview assistant"
authors = ["CueMate Team"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "shell-open",
  "system-tray",
  "window-all",
  "global-shortcut-all",
  "clipboard-all",
  "notification-all",
  "process-all",
  "fs-all",
  "path-all"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
